# open-webui-functions

./: .gitignore  AGENTS.md  README.md  auto_chat_cleanup.py  auto_memory.backup.py  auto_memory.py  conftest.py  pyproject.toml  test_auto_memory.py  test_auto_memory_async.py  test_auto_memory_basic.py  test_integration.py  test_report.md
.cspell/: custom-dictionary-workspace.txt
.sisyphus/: boulder.json
.sisyphus/drafts/: auto-memory-refactor.md
.sisyphus/evidence/: task-1-auto-chat-cleanup.txt  task-2-auto-chat-cleanup-selection.txt  task-2-auto-chat-cleanup.txt  task-3-auto-chat-cleanup.txt  task-4-auto-chat-cleanup.txt  task-5-auto-chat-cleanup-root.txt  task-5-auto-chat-cleanup.txt  task-6-auto-chat-cleanup-scope.txt  task-6-auto-chat-cleanup.txt
.sisyphus/notepads/auto-chat-cleanup-plugin/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/auto-memory/: learnings.md
.sisyphus/notepads/auto-memory-decay-model/: issues.md  learnings.md
.sisyphus/notepads/auto-memory-full-file-refactor/: issues.md  learnings.md
.sisyphus/plans/: auto-chat-cleanup-plugin.md  auto-memory-decay-model.md  auto-memory-full-file-refactor.md  auto-memory-function-calling-refactor.md  memory-decay-refactor.md
open_webui/: __init__.py  main.py
open_webui/internal/: __init__.py  db.py
open_webui/models/: __init__.py  chats.py  users.py
open_webui/retrieval/: __init__.py
open_webui/routers/: __init__.py  memories.py
open_webui/utils/: access_control.py
tests/: conftest.py  test_auto_chat_cleanup.py  test_auto_memory_function_calling.py
(+8 files in other folders)
